# flow

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md
.config/: nextest.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
crates/liminal-flow-cli/: Cargo.toml  build.rs
crates/liminal-flow-cli/src/: main.rs  output.rs
crates/liminal-flow-cli/src/cli/: archive.rs  back.rs  branch.rs  colour.rs  done.rs  list.rs  mod.rs  note.rs  now.rs  park.rs  pause.rs  resume.rs  where_cmd.rs
crates/liminal-flow-context/: Cargo.toml
crates/liminal-flow-context/src/: cwd.rs  error.rs  git.rs  lib.rs  scope_collector.rs
crates/liminal-flow-core/: Cargo.toml
crates/liminal-flow-core/src/: error.rs  event.rs  lib.rs  reducer.rs  rules.rs  state.rs
crates/liminal-flow-core/src/model/: branch.rs  capture.rs  hint.rs  id.rs  mod.rs  reply.rs  scope.rs  thread.rs
crates/liminal-flow-store/: Cargo.toml
crates/liminal-flow-store/src/: config.rs  db.rs  error.rs  lib.rs  paths.rs
crates/liminal-flow-store/src/migrations/: mod.rs  v001_initial.rs  v002_archive_statuses.rs
crates/liminal-flow-store/src/repo/: branch_repo.rs  capture_repo.rs  event_repo.rs  hint_repo.rs  mod.rs  scope_repo.rs  thread_repo.rs
crates/liminal-flow-tui/: Cargo.toml
crates/liminal-flow-tui/src/: app.rs  input.rs  lib.rs  poll.rs  state.rs
crates/liminal-flow-tui/src/ui/: about.rs  command_palette.rs  help.rs  hints_bar.rs  input_pane.rs  layout.rs  mod.rs  reply_pane.rs  theme.rs  thread_list.rs
docs/: README.md  ci.md  issue-triage.md
docs/implementation/: doing_sidecar_v_1_concept.md  liminal_flow_implementation_plan.md
docs/release/: distribution-strategy.md
docs/ux/: 2026-03-13-command-targeting-and-completion-design.md  v1-tui-navigation-followups.md  v1-tui-navigation-review.md
scripts/: build-linux-packages.sh  build-release-archive.sh  prepare-release-version.sh
