[package]
name = "liminal-flow-cli"
description = "CLI and TUI entrypoint for Liminal Flow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "flo"
path = "src/main.rs"

[dependencies]
liminal-flow-core.workspace = true
liminal-flow-store.workspace = true
liminal-flow-tui.workspace = true
liminal-flow-context.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
