[package]
name = "liminal-flow-cli"
description = "CLI and TUI entrypoint for Liminal Flow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "flo"
path = "src/main.rs"

[dependencies]
liminal-flow-core.workspace = true
liminal-flow-store.workspace = true
liminal-flow-tui.workspace = true
liminal-flow-context.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
chrono.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
clap.workspace = true
clap_mangen.workspace = true
