[package]
name = "liminal-flow-context"
description = "Git and workspace context discovery for Liminal Flow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
liminal-flow-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
