[package]
name = "liminal-flow-context"
description = "Git and workspace context discovery for Liminal Flow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
liminal-flow-core.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
