[package]
name = "liminal-flow-core"
description = "Domain model, events, reducer, and rules for Liminal Flow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
ulid.workspace = true
tracing.workspace = true
