[package]
name = "liminal-flow-store"
description = "SQLite persistence, migrations, and repositories for Liminal Flow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
liminal-flow-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
directories.workspace = true
toml.workspace = true
